@@ -1,9 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: ????
+  Features:
+    - Added keyboard shortcuts for changing categories in the search GUI
+    - The shortcut button properly toggles the search GUI open/closed, instead of just opening it
   Changes:
     - Refactored mod structure to improve performance and simplicity
     - Switched from RaiLuaLib to FLib
+    - Changing search categories will no longer reset the textfield to blank
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.3
 Date: 2020-04-12
